--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "using-cognite-python-sdk"
 version = "0.1.0"
 description = ""
 authors = ["Cognite <academy@cognite.com>"]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.8"
