--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
-cognite-sdk = ">=7"
+cognite-sdk = {extras = ["pandas"], version = "^7.91.1"}
 notebook = "^7.5.3"
 
 [build-system]
